@@ -1,3 +1,10 @@
+2005-01-20  David Hyatt  <hyatt@apple.com>
+
+	Fix for oddness on albertsons.com.  Make sure not to crash when setting/removing style properties on a node
+	with no document.  The bug # is 3813900.
+	
+        Reviewed by john
+
 2005-01-20  David Harrison  <harrison@apple.com>
 
         Reviewed by Darin.
